Replace Reactor Stream by Flux in tests when possible