@@ -19,12 +19,13 @@ package org.springframework.reactive.codec.decoder;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.stream.StreamSupport;
 
+import static java.util.stream.Collectors.toList;
 import static org.junit.Assert.assertEquals;
 import org.junit.Test;
+import reactor.Flux;
 import reactor.io.buffer.Buffer;
-import reactor.rx.Stream;
-import reactor.rx.Streams;
 
 import org.springframework.core.codec.support.JsonObjectDecoder;
 
@@ -36,12 +37,13 @@ public class JsonObjectDecoderTests {
 	@Test
 	public void decodeSingleChunkToJsonObject() throws InterruptedException {
 		JsonObjectDecoder decoder = new JsonObjectDecoder();
-		Stream<ByteBuffer> source = Streams.just(Buffer.wrap("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}").byteBuffer());
-		List<String> results = Streams.from(decoder.decode(source, null, null)).map(chunk -> {
-					byte[] b = new byte[chunk.remaining()];
-					chunk.get(b);
-					return new String(b, StandardCharsets.UTF_8);
-				}).toList().get();
+		Flux<ByteBuffer> source = Flux.just(Buffer.wrap("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}").byteBuffer());
+		Flux<String> output = decoder.decode(source, null, null).map(chunk -> {
+			byte[] b = new byte[chunk.remaining()];
+			chunk.get(b);
+			return new String(b, StandardCharsets.UTF_8);
+		});
+		List<Object> results = StreamSupport.stream(output.toIterable().spliterator(), false).collect(toList());
 		assertEquals(1, results.size());
 		assertEquals("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}", results.get(0));
 	}
@@ -49,12 +51,13 @@ public class JsonObjectDecoderTests {
 	@Test
 	public void decodeMultipleChunksToJsonObject() throws InterruptedException {
 		JsonObjectDecoder decoder = new JsonObjectDecoder();
-		Stream<ByteBuffer> source = Streams.just(Buffer.wrap("{\"foo\": \"foofoo\"").byteBuffer(), Buffer.wrap(", \"bar\": \"barbar\"}").byteBuffer());
-		List<String> results = Streams.from(decoder.decode(source, null, null)).map(chunk -> {
-					byte[] b = new byte[chunk.remaining()];
-					chunk.get(b);
-					return new String(b, StandardCharsets.UTF_8);
-				}).toList().get();
+		Flux<ByteBuffer> source = Flux.just(Buffer.wrap("{\"foo\": \"foofoo\"").byteBuffer(), Buffer.wrap(", \"bar\": \"barbar\"}").byteBuffer());
+		Flux<String> output = decoder.decode(source, null, null).map(chunk -> {
+			byte[] b = new byte[chunk.remaining()];
+			chunk.get(b);
+			return new String(b, StandardCharsets.UTF_8);
+		});
+		List<String> results = StreamSupport.stream(output.toIterable().spliterator(), false).collect(toList());
 		assertEquals(1, results.size());
 		assertEquals("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}", results.get(0));
 	}
@@ -62,12 +65,13 @@ public class JsonObjectDecoderTests {
 	@Test
 	public void decodeSingleChunkToArray() throws InterruptedException {
 		JsonObjectDecoder decoder = new JsonObjectDecoder();
-		Stream<ByteBuffer> source = Streams.just(Buffer.wrap("[{\"foo\": \"foofoo\", \"bar\": \"barbar\"},{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}]").byteBuffer());
-		List<String> results = Streams.from(decoder.decode(source, null, null)).map(chunk -> {
-					byte[] b = new byte[chunk.remaining()];
-					chunk.get(b);
-					return new String(b, StandardCharsets.UTF_8);
-				}).toList().get();
+		Flux<ByteBuffer> source = Flux.just(Buffer.wrap("[{\"foo\": \"foofoo\", \"bar\": \"barbar\"},{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}]").byteBuffer());
+		Flux<String> output = decoder.decode(source, null, null).map(chunk -> {
+			byte[] b = new byte[chunk.remaining()];
+			chunk.get(b);
+			return new String(b, StandardCharsets.UTF_8);
+		});
+		List<String> results = StreamSupport.stream(output.toIterable().spliterator(), false).collect(toList());
 		assertEquals(2, results.size());
 		assertEquals("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}", results.get(0));
 		assertEquals("{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}", results.get(1));
@@ -76,12 +80,13 @@ public class JsonObjectDecoderTests {
 	@Test
 	public void decodeMultipleChunksToArray() throws InterruptedException {
 		JsonObjectDecoder decoder = new JsonObjectDecoder();
-		Stream<ByteBuffer> source = Streams.just(Buffer.wrap("[{\"foo\": \"foofoo\", \"bar\"").byteBuffer(), Buffer.wrap(": \"barbar\"},{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}]").byteBuffer());
-		List<String> results = Streams.from(decoder.decode(source, null, null)).map(chunk -> {
-					byte[] b = new byte[chunk.remaining()];
-					chunk.get(b);
-					return new String(b, StandardCharsets.UTF_8);
-				}).toList().get();
+		Flux<ByteBuffer> source = Flux.just(Buffer.wrap("[{\"foo\": \"foofoo\", \"bar\"").byteBuffer(), Buffer.wrap(": \"barbar\"},{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}]").byteBuffer());
+		Flux<String> output = decoder.decode(source, null, null).map(chunk -> {
+			byte[] b = new byte[chunk.remaining()];
+			chunk.get(b);
+			return new String(b, StandardCharsets.UTF_8);
+		});
+		List<String> results = StreamSupport.stream(output.toIterable().spliterator(), false).collect(toList());
 		assertEquals(2, results.size());
 		assertEquals("{\"foo\": \"foofoo\", \"bar\": \"barbar\"}", results.get(0));
 		assertEquals("{\"foo\": \"foofoofoo\", \"bar\": \"barbarbar\"}", results.get(1));
