@@ -16,15 +16,17 @@
 
 package org.springframework.reactive.codec.encoder;
 
+import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.stream.StreamSupport;
 
+import static java.util.stream.Collectors.toList;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import org.junit.Test;
-import reactor.rx.Stream;
-import reactor.rx.Streams;
+import reactor.Flux;
 
 import org.springframework.core.codec.support.JacksonJsonEncoder;
 import org.springframework.http.MediaType;
@@ -45,12 +47,13 @@ public class JacksonJsonEncoderTests {
 
 	@Test
 	public void write() throws InterruptedException {
-		Stream<Pojo> source = Streams.just(new Pojo("foofoo", "barbar"), new Pojo("foofoofoo", "barbarbar"));
-		List<String> results = Streams.from(encoder.encode(source, null, null)).map(chunk -> {
+		Flux<Pojo> source = Flux.just(new Pojo("foofoo", "barbar"), new Pojo("foofoofoo", "barbarbar"));
+		Flux<String> output = encoder.encode(source, null, null).map(chunk -> {
 			byte[] b = new byte[chunk.remaining()];
 			chunk.get(b);
 			return new String(b, StandardCharsets.UTF_8);
-		}).toList().get();
+		});
+		List<String> results = StreamSupport.stream(output.toIterable().spliterator(), false).collect(toList());
 		assertEquals(2, results.size());
 		assertEquals("{\"foo\":\"foofoo\",\"bar\":\"barbar\"}", results.get(0));
 		assertEquals("{\"foo\":\"foofoofoo\",\"bar\":\"barbarbar\"}", results.get(1));
